<resources>
    <string name="app_name">RandomFileMaker</string>
    <string name="make">Make</string>
    <string name="make_exclamation">Make!</string>
    <string name="configuration">Configuration</string>
    <string name="theme_configuration">Theme configuration</string>
    <string name="about">About</string>
    <string name="size">Size</string>
    <string name="Bytes">Bytes</string>
    <string name="KB">KB</string>
    <string name="MB">MB</string>
    <string name="GB">GB</string>
    <string name="using_securerandom">Using SecureRandom</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="title_activity_license">License</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="make_file_failed">Make file failed:</string>
    <string name="making_file_dont_close">Making random file, don\&apos;t close</string>
    <string name="done">Done</string>
    <string name="this_program_is_free_software">
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    </string>

</resources>